--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <% if current_user %>
+       Signed in as <%= current_user.name %> | <%= link_to "Logout", logout_path %>
+       <% else %>
+       <%= link_to 'Login', login_path %> | <%= link_to 'Register',register_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
