--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Page#index</h1>
 <p>Find me in app/views/page/index.html.erb</p>
+<!-- Here is where the code people I want to see should go -->
