updated views/controller in startups/investors

--- a/app/views/investor/index.html.erb
+++ b/app/views/investor/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Investor#index</h1>
-<p>Find me in app/views/investor/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<h1>Investors</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Website</th>
+      <th>Address</th>
+      <th>Description</th>
+      <th>Founded date</th>
+      <th>Approval</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @investors.each do |investor| %>
+      <tr>
+        <td><%= investor.name %></td>
+        <td><%= investor.email %></td>
+        <td><%= investor.website %></td>
+        <td><%= investor.address %></td>
+        <td><%= investor.description %></td>
+        <td><%= investor.founded_date %></td>
+        <td><%= investor.approval %></td>
+        <td><%= link_to 'Show', investor %></td>
+        <td><%= link_to 'Edit', edit_investor_path(investor) %></td>
+        <td><%= link_to 'Destroy', investor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Investor', new_investor_path %>
