--- a/app/views/startup/index.html.erb
+++ b/app/views/startup/index.html.erb
@@ -1,21 +1,39 @@
-<div class="startups index">
-  <h2> Startups </h2>
-</div>
+<p id="notice"><%= notice %></p>
 
-<div class="">
-  <table>
-    <%= @startups.each do |startups| %>
+<h1>Startups</h1>
+
+<table>
+  <thead>
     <tr>
-      <td> <%= startup.name %> </td>
-      <td> <%= startup.website %> </td>
-      <td> <%= startup.address %> </td>
-      <td> <%= startup.description %> </td>
-      <td> <%= startup.founded_date %> </td>
-      <td class="actions">
-        <%= link_to("show", '#', :class => 'action show') %>
-        <%= link_to("edit", '#', :class => 'action edit') %>
-        <%= link_to("delete", '#', :class => 'action delete') %>
-      </td>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Website</th>
+      <th>Address</th>
+      <th>Description</th>
+      <th>Founded date</th>
+      <th>Approval</th>
+      <th colspan="3"></th>
     </tr>
-  </table>
-</div>
+  </thead>
+
+  <tbody>
+    <% @startups.each do |startup| %>
+      <tr>
+        <td><%= startup.name %></td>
+        <td><%= startup.email %></td>
+        <td><%= startup.website %></td>
+        <td><%= startup.address %></td>
+        <td><%= startup.description %></td>
+        <td><%= startup.founded_date %></td>
+        <td><%= startup.approval %></td>
+        <td><%= link_to 'Show', startup %></td>
+        <td><%= link_to 'Edit', edit_startup_path(startup) %></td>
+        <td><%= link_to 'Destroy', startup, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Startup', new_startup_path %>
