--- a/app/views/investors/index.html.erb
+++ b/app/views/investors/index.html.erb
@@ -11,7 +11,6 @@
       <th>Address</th>
       <th>Description</th>
       <th>Founded date</th>
-      <th>Approval</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,15 +24,9 @@
         <td><%= investor.address %></td>
         <td><%= investor.description %></td>
         <td><%= investor.founded_date %></td>
-        <td><%= investor.approval %></td>
-        <td><%= link_to 'Show', investor %></td>
-        <td><%= link_to 'Edit', edit_investor_path(investor) %></td>
-        <td><%= link_to 'Destroy', investor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <td><%= link_to 'Learn More', investor %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Investor', new_investor_path %>
