--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -11,7 +11,6 @@
       <th>Address</th>
       <th>Description</th>
       <th>Founded date</th>
-      <th>Approval</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,15 +24,9 @@
         <td><%= startup.address %></td>
         <td><%= startup.description %></td>
         <td><%= startup.founded_date %></td>
-        <td><%= startup.approval %></td>
-        <td><%= link_to 'Show', startup %></td>
-        <td><%= link_to 'Edit', edit_startup_path(startup) %></td>
-        <td><%= link_to 'Destroy', startup, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Learn More', startup %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Startup', new_startup_path %>
