added bootstrap navbar with register and login links

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,11 @@
      float: none;
      margin: 0 auto;
  }
+
+ #nav {
+   background-color: #fff;
+ }
+
+.navbar li {
+  color: #fff !important;
+}
