Made changes to the app/investors/startups controllers, updated user model, as well as investors/startups/users views

--- a/app/views/users/admin_panel.html.erb
+++ b/app/views/users/admin_panel.html.erb
@@ -1,5 +1,5 @@
 <div> 
-<h3> Investors </h3>
+<h3> List of investors to be approved: </h3>
   <table>
     <tr>
       <th>Name</th>
@@ -30,7 +30,7 @@
   <!-- Add buttons for approval -->
 
 <div> 
-<h3> Startups </h3>
+<h3> List of startups to be approved: </h3>
   <table>
     <tr>
       <th>Name</th>
