--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,21 +20,35 @@
        <% else %>
        <%= link_to 'Login', login_path %> | <%= link_to 'Register',register_path %>
     <% end %> -->
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
+    <header class="navbar">
+      <div class="container-fluid">
         <%= link_to "Miami Made", '#', id: "logo" %>
         <nav id="nav">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Register", new_user_path %></li>
-            <li><%= link_to "Login", users_path %></li>
+            <li><%= link_to "Register", register_path %></li>
+            <li><%= link_to "Login", login_path %></li>
           </ul>
         </nav>
       </div>
     </header>
-    <div class="container-fluid">
-    <%= yield %>
-    </div>
+
+    <main>
+      <div class="container-fluid">
+        <%= yield %>
+      </div>
+    </main>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=#{ENV['MAPKEY']}&callback=initMap"
+    async defer></script>
   </body>
 </html>
