-Fixed bootstrap column height issues -Readded map to homepage to fit column

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,15 +14,9 @@
  *= require_self
  */
 
-.col-centered {
-   float: none;
-   margin: 0 auto;
-}
-
 .container-fluid {
   border: 2px solid red;
+  height: 100%;
 }
 
-.navbar li {
-  color: #fff !important;
-}
+html, body, main, .row, .col-md-6, #map-canvas { height: 100% }
