--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div id="col-sm-12 col-md-6 sidebar">
+	<div class="col-sm-12 col-md-6">
 			<h2>South Florida StartUp Ecosystem</h2>
 			<p>We'll help you locate and get information about SouthFlorida StartUps, Inverstors and all components of the ecosystem.  PLease select the filters of the information you would like us to display and press Search...</p>
 
@@ -60,7 +60,7 @@
 
 	<!-- an empty div for the map -->
 	<div class="col-md-6">
-		<div id="map"></div>
+		<div id="map-canvas">hello</div>
 	</div>
 
 </div>
