added capybara gem

--- a/app/views/startups/show.html.erb
+++ b/app/views/startups/show.html.erb
@@ -33,3 +33,5 @@
 
 <%= link_to 'Edit', edit_startup_path(@startup) %> |
 <%= link_to 'Back', startups_path %>
+
+<td><%= link_to 'Add a new startup', new_startup_path(@startup) %></td>
