--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -27,6 +27,6 @@
         <td><%= link_to 'Learn More', startup %></td>
       </tr>
     <% end %>
+    <td><%= button_to 'Add a new startup', new_startup_path, method:'get' %></td>
   </tbody>
 </table>
-
