--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
         <%= link_to "Miami Made", '#', id: "logo" %>
         <nav id="nav">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Register", register_path %></li>
-            <li><%= link_to "Login", login_path %></li>
+            <!-- <li><%= link_to "Register", register_path %></li>
+            <li><%= link_to "Login", login_path %></li> -->
           </ul>
         </nav>
       </div>
