added Startups and Investors links in navbar implemented only one login and register link in navbar

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -4,11 +4,6 @@
 			<p>We'll help you locate and get information about SouthFlorida StartUps, Inverstors and all components of the ecosystem.  PLease select the filters of the information you would like us to display and press Search...</p>
 
 	    </br>
-	    <!-- <% if current_user %>
-	       Signed in as <%= current_user.name %> | <%= link_to "Logout", logout_path %>
-	       <% else %>
-	       <%= link_to 'Login', login_path %> | <%= link_to 'Register',register_path %>
-	    <% end %> -->
 	    </br>
 
 	    <form method="get" id="chooseZip">
@@ -16,8 +11,7 @@
 	    	<button type="submit" class="learnButton">Vertical selection</button>
 
 	      <div class="dropdown">
-	          <button onclick="myFunction()"
-	          class="dropbtn">Industry Selection</button>
+	          <button onclick="myFunction()" class="dropbtn">Industry Selection</button>
 	          <div id="myDropdown" class="dropdown-content">
 	              <a href="#">Link 1</a>
 	              <a href="#">Link 2</a>
@@ -54,7 +48,6 @@
 	    </br></br>
 			<div class="clear"></div>
 			<div id="results"></div>
-			<p>A project by <a href="">Victoria, Alejandra, Andres</a>.</p>
 	</div>
 
 
