--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,20 @@
     <% end %> -->
     <header class="navbar">
       <div class="container-fluid">
-        <%= link_to "Miami Made", '#', id: "logo" %>
+        <%= link_to "Miami Made", root_path, id: "logo" %>
         <nav id="nav">
           <ul class="nav navbar-nav navbar-right">
-            <!-- <li><%= link_to "Register", register_path %></li>
-            <li><%= link_to "Login", login_path %></li> -->
+            <% if current_user %>
+              <li><%= link_to 'Startups', startups_path %></li>
+              <li><%= link_to 'Investors', investors_path %></li>
+              <li>Signed in as <%= current_user.name %></li>
+              <li><%= link_to "Logout", logout_path %></li>
+              <% else %>
+              <li><%= link_to 'Startups', startups_path %></li>
+              <li><%= link_to 'Investors', investors_path %></li>
+              <li><%= link_to 'Login', login_path %></li>
+              <li><%= link_to 'Register',register_path %></li>
+      	    <% end %>
           </ul>
         </nav>
       </div>
