--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -1,17 +1,26 @@
-
-/* Global styles */
-html, body {
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-  }
-
-
-body {
-	font-family: "Open Sans", sans-serif;
-	/* font-family: 'Libre Baskerville', serif; */
-	font-size: 15px;
+h1#title {
+	font-size: 3em;
+	text-align: center;
+	padding-bottom: 20px;
+	text-align: center;
 }
+
+p {
+	padding-bottom: 20px;
+	text-align: center;
+}
+
+#sidebar {
+	padding: 50px;
+}
+
+.vertical-line {
+	border-right: 1px solid #333;
+}
+
+
+
+
 // .clearfix:after {
 //    content: " ";
 //    display: block;
@@ -41,10 +50,6 @@ body {
 //
 // h1 {
 // 	font-size: 28px;
-// }
-//
-// h2 {
-// 	font-size: 26px;
 // }
 //
 // h3 {
