--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,58 +1,81 @@
 <div class="row">
-	<div class="col-sm-12 col-md-6">
-			<h2>South Florida StartUp Ecosystem</h2>
-			<p>We'll help you locate and get information about SouthFlorida StartUps, Inverstors and all components of the ecosystem.  PLease select the filters of the information you would like us to display and press Search...</p>
+	<div class="col-xs-12 col-md-6" id="sidebar">
+		<!--Description-->
+		<h1 id="title">SoFla StartUp Ecosystem</h1>
+		<p class="lead">We'll help you locate and get information about South Florida Startups, Investors and all components of the ecosystem. PLease select the filters of the information you would like us to display and press Search...</p>
 
-	    </br>
-	    </br>
 
-	    <form method="get" id="chooseZip">
-				<button type="submit" class="learnButton">Entity selection</button>
-	    	<button type="submit" class="learnButton">Vertical selection</button>
-
-	      <div class="dropdown">
-	          <button onclick="myFunction()" class="dropbtn">Industry Selection</button>
-	          <div id="myDropdown" class="dropdown-content">
-	              <a href="#">Link 1</a>
-	              <a href="#">Link 2</a>
-	              <a href="#">Link 3</a>
-	          </div>
-	      </div>
-
-	      </br></br>
-	      <input type="radio"> StartUps</button></br></br>
-	      <input type="radio"> Investors</button></br></br></br>
-
-	      <button type="submit" class="learnButton">Search</button>
-
-				<!-- <button type="button" id="searchZip" class="learnButton">Search by Zip Code</button> -->
-				<!-- <div class="clear"></div>
-				<div class="zipSearch">
-					<input id="textZip" type="text" name="zip" placeholder="enter your zip code" autofocus>
-					<button type="submit" class="learnButton">Search</button>
-				</div> -->
-				<div class="clear"></div>
-			</form>
-
-			<p>If you've found this App helpful, please help spread the word!</p>
-
-			<div class="social">
-
-				<div class="twitter">
-					<a href="https://twitter.com/share" class="twitter-share-button" data-via="pauldessert">Tweet</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+		<!--Filters-->
+		<div class="row">
+			<!--Startup Filters-->
+			<div class="col-sm-6 vertical-line">
+				<div class="checkbox">
+				  <label>
+				    <input type="checkbox" value="">
+				    Startups
+				  </label>
 				</div>
-
-
+				<h4>Industry Vertical:</h4>
+				<select class="form-control">
+				  <option>Vertical 1</option>
+				  <option>Vertical 2</option>
+				  <option>Vertical 3</option>
+				  <option>Vertical 4</option>
+				  <option>Vertical 5</option>
+					<option>All</option>
+				</select>
+				<hr>
+				<h4>Stage:</h4>
+				<select class="form-control">
+				  <option>Stage 1</option>
+				  <option>Stage 2</option>
+				  <option>Stage 3</option>
+				  <option>Stage 4</option>
+				  <option>Stage 5</option>
+					<option>All</option>
+				</select>
 			</div>
-	    </br></br>
-			<div class="clear"></div>
-			<div id="results"></div>
+			<!--Investor Filters-->
+			<div class="col-sm-6">
+				<div class="checkbox">
+				  <label>
+				    <input type="checkbox" value="">
+				    Investors
+				  </label>
+				</div>
+				<h4>Industry Vertical:</h4>
+				<select class="form-control">
+				  <option>Vertical 1</option>
+				  <option>Vertical 1</option>
+				  <option>Vertical 3</option>
+				  <option>Vertical 4</option>
+				  <option>Vertical 5</option>
+					<option>All</option>
+				</select>
+				<hr>
+				<h4>Investor Type:</h4>
+				<select class="form-control">
+				  <option>Angel Investor</option>
+				  <option>Venture Capitalist</option>
+				  <option>Peer-to-Peer Lending</option>
+				  <option>All</option>
+				</select>
+			</div>
+			<!--Searchbox-->
+			<div class="col-sm-12 centered">
+			<h1>Search</h1>
+			<%= form_tag("/search", method: "get") do %>
+  			<%= search_field_tag :term %>
+  			<%= submit_tag "Go!" %>
+			<% end %>
+			<%= params[:term] %>
+			</div>
+		</div>
 	</div>
 
-
 	<!-- an empty div for the map -->
-	<div class="col-md-6">
+
+	<div class="col-xs-12 col-md-6">
 		<div id="map-canvas"></div>
 	</div>
 
