--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -18,6 +18,16 @@ p {
 	border-right: 1px solid #333;
 }
 
+//CSS styling for the infowindows that are presented in the Google Maps
+#infowindow {
+	background: #fff;
+	border: 1px solid #999;
+	border-radius: 3px;
+	line-height: 35px;
+	padding: 10px 10px 30px 10px;
+	text-align: left;
+	width: 200px;
+}
 
 
 
