--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['MAPKEY'] %>"
+    <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['MAPKEY'] %>&callback=initMap"
     async defer></script>
   </head>
 
