--- a/app/views/investors/new.html.erb
+++ b/app/views/investors/new.html.erb
@@ -1,5 +1,11 @@
-<h1> Add an Investor</h1>
+<div class="row">
+  <div class="col-sm-12 col-md-4"></div>
+  <div class="col-sm-12 col-md-4 form-style">
+  <h1>Add Investor</h1>
 
-<%= render 'form', investor: @investor %>
+  <%= render 'form', investor: @investor %>
 
-<%= link_to 'Back', investors_path %>
+  <%= link_to 'Back', investors_path %>
+  </div>
+  <div class="col-sm-12 col-md-4"></div>
+</div>
