--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -17,12 +17,26 @@
 				</div>
 				<h4>Industry Vertical:</h4>
 				<select class="form-control">
-				  <option>Vertical 1</option>
-				  <option>Vertical 2</option>
-				  <option>Vertical 3</option>
-				  <option>Vertical 4</option>
-				  <option>Vertical 5</option>
 					<option>All</option>
+				  <option>Advertising</option>
+				  <option>Apps</option>
+				  <option>Biotechnology</option>
+				  <option>Commerce and Shopping</option>
+					<option>Community and Lifestyle</option>
+				  <option>Consumer Electronics</option>
+				  <option>Content and Publishing</option>
+				  <option>Data and Analytics</option>
+					<option>Fashion</option>
+				  <option>Financial Services</option>
+					<option>Food and Beverage</option>
+				  <option>Government and Military</option>
+				  <option>Hardware</option>
+				  <option>Healthcare</option>
+				  <option>Internet Services</option>
+					<option>Manufacturing</option>
+				  <option>Media and Entertainment</option>
+				  <option>Mobile</option>
+				  <option>Software</option>
 				</select>
 				<hr>
 				<h4>Stage:</h4>
@@ -45,12 +59,26 @@
 				</div>
 				<h4>Industry Vertical:</h4>
 				<select class="form-control">
-				  <option>Vertical 1</option>
-				  <option>Vertical 1</option>
-				  <option>Vertical 3</option>
-				  <option>Vertical 4</option>
-				  <option>Vertical 5</option>
 					<option>All</option>
+					<option>Advertising</option>
+					<option>Apps</option>
+					<option>Biotechnology</option>
+					<option>Commerce and Shopping</option>
+					<option>Community and Lifestyle</option>
+					<option>Consumer Electronics</option>
+					<option>Content and Publishing</option>
+					<option>Data and Analytics</option>
+					<option>Fashion</option>
+					<option>Financial Services</option>
+					<option>Food and Beverage</option>
+					<option>Government and Military</option>
+					<option>Hardware</option>
+					<option>Healthcare</option>
+					<option>Internet Services</option>
+					<option>Manufacturing</option>
+					<option>Media and Entertainment</option>
+					<option>Mobile</option>
+					<option>Software</option>
 				</select>
 				<hr>
 				<h4>Investor Type:</h4>
