--- a/app/views/startups/_form.html.erb
+++ b/app/views/startups/_form.html.erb
@@ -13,32 +13,32 @@
 
   <div class="field">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control', placeholder: 'Name' %>
   </div>
 
   <div class="field">
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
   </div>
 
   <div class="field">
     <%= f.label :website %>
-    <%= f.text_field :website %>
+    <%= f.text_field :website, class: 'form-control', placeholder: 'Website' %>
   </div>
 
   <div class="field">
     <%= f.label :address %>
-    <%= f.text_field :address %>
+    <%= f.text_field :address, class: 'form-control', placeholder: 'Address' %>
   </div>
 
   <div class="field">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: 'form-control', placeholder: 'Description' %>
   </div>
 
   <div class="field">
     <%= f.label :founded_date %>
-    <%= f.date_select :founded_date %>
+    <%= f.date_select :founded_date, class: 'form-control', placeholder: 'Founded Date' %>
   </div>
 
   <div class="actions">
