--- a/app/views/startups/new.html.erb
+++ b/app/views/startups/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Startup</h1>
+<div class="row">
+  <div class="col-sm-12 col-md-4"></div>
+  <div class="col-sm-12 col-md-4 form-style">
+    <h1>New Startup</h1>
 
-<%= render 'form', startup: @startup %>
+    <%= render 'form', startup: @startup %>
 
-<%= link_to 'Back', startups_path %>
+    <%= link_to 'Back', startups_path %>
+  </div>
+  <div class="col-sm-12 col-md-4"></div>
+</div>
