added vertical to startups/investors, migrated database, added description length limits to startups/investors index page

--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= startup.email %></td>
         <td><%= startup.website %></td>
         <td><%= startup.address %></td>
-        <td><%= startup.description %></td>
+        <td><%= startup.description[0..100]%>...</td>
         <td><%= startup.founded_date %></td>
         <td><%= link_to 'Learn More', startup %></td>
       </tr>
