--- a/app/views/investors/index.html.erb
+++ b/app/views/investors/index.html.erb
@@ -22,11 +22,10 @@
         <td><%= investor.email %></td>
         <td><%= investor.website %></td>
         <td><%= investor.address %></td>
-        <td><%= investor.description %></td>
+        <td><%= investor.description[0..100]...%></td>
         <td><%= investor.founded_date %></td>
          <td><%= link_to 'Learn More', investor %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
