--- a/app/views/investors/index.html.erb
+++ b/app/views/investors/index.html.erb
@@ -22,11 +22,11 @@
         <td><%= investor.email %></td>
         <td><%= investor.website %></td>
         <td><%= investor.address %></td>
-        <td><%= investor.description[0..100]...%></td>
+        <td><%= investor.description[0..100]%>...</td>
         <td><%= investor.founded_date %></td>
         <td><%= link_to 'Learn More', investor %></td>
       </tr>
     <% end %>
-    <td><%= button_to 'Add a new investor', new_startup_path, method:'get' %></td>
+    <td><%= button_to 'Add a new investor', new_investor_path, method:'get' %></td>
   </tbody>
 </table>
