created one functional filter

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
  body {
- 	background-image: url(/assets/images/skyline.js);
+ 	/*background-image: url("/assets/images/skyline.jpg");*/
  }
 
 #logo {
