--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-	<div class="col-xs-12 col-md-6" id="sidebar">
+	<div class="col-xs-12 col-md-4 hidden" id="sidebar">
 		<!--Description-->
 		<h1 id="title">SoFla StartUp Ecosystem</h1>
-		<p class="lead">We'll help you locate and get information about South Florida Startups, Investors and all components of the ecosystem. PLease select the filters of the information you would like us to display and press Search...</p>
+		<p class="lead">We'll help you locate and get information about South Florida Startups, Investors and all components of the ecosystem. Please select the filters of the information you would like us to display and press Search...</p>
 
 
 		<!--Filters-->
@@ -39,10 +39,8 @@
 				</div>
 				<h4 id="investor" data-investors='<%= @coords  %>'>Industry Vertical:</h4>
 				<%= form_tag('/vertical-search', method: :get) do %>
-				<%= select_tag(:vertical, options_for_select(Investor.verticals), id: 'filter') %>
-
-			<%= submit_tag 'Submit' %>
-			<% end %>
+				<%= select_tag(:vertical, options_for_select(Investor.verticals), id: 'filter', class: "form-control") %>
+				<% end %>
 				<hr>
 				<h4>Investor Type:</h4>
 				<select class="form-control">
@@ -51,6 +49,8 @@
 				  <option>Peer-to-Peer Lending</option>
 				  <option>All</option>
 				</select>
+				<br>
+				<%= submit_tag 'Submit', class: "btn btn-primary" %>
 			</div>
 			<!--Searchbox-->
 			<div class="row">
@@ -69,7 +69,7 @@
 
 	<!-- an empty div for the map -->
 
-	<div class="col-xs-12 col-md-6">
+	<div class="col-xs-12 col-md-8">
 		<div id="map-canvas"></div>
 	</div>
 
