--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-12 col-md-4 col-centered">
+  <div class="col-sm-12 col-md-4 col-md-offset-4">
     <%= form_for(user) do |f| %>
       <% if user.errors.any? %>
         <div id="error_explanation">
