--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
-html, body, main, .row, .col-md-6, #map-canvas { height: 100% }
+html, body, main, .row, .container-fluid, .col-md-8, #map-canvas { height: 100% }
 
 
 html body {
