add login/register modal

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -28,6 +28,16 @@
 				  <option>Stage 5</option>
 					<option>All</option>
 				</select>
+				<hr>
+				<h4>Founded Date:</h4>
+				<select class="form-control">
+				  <option>2012-Present</option>
+				  <option>2007-2011</option>
+				  <option>2002-2006</option>
+				  <option>1997-2001</option>
+				  <option>< 1996</option>
+					<option>All</option>
+				</select>
 			</div>
 			<!--Investor Filters-->
 			<div class="col-sm-6">
