--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,9 @@
 <div class="row">
   <div class="col-sm-12 col-md-4 col-md-offset-4">
-    <%= form_for(user) do |f| %>
+    <%= form_for(user, html: {class: "register-form"}) do |f| %>
       <% if user.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
           <ul>
           <% user.errors.full_messages.each do |message| %>
             <li><%= message %></li>
@@ -20,7 +19,7 @@
 
       <div class="field">
         <%= f.label :email %>
-        <%= f.text_field :email %>
+        <%= f.email_field :email %>
       </div>
 
       <div class="field">
