--- a/app/views/user_mailer/registration_confirmation.text.erb
+++ b/app/views/user_mailer/registration_confirmation.text.erb
@@ -1,5 +1,5 @@
-Hi <%= @user.name %>,
+Hi <%= @user.name %>
 
 Thanks for registering! To confirm your registration click the URL below.
 
-<%= confirm_email_user_url(@user.confirm_token) %>
+<%= confirm_email_user_url(@user.token_confirmation) %>
